--- a/res_MuSu/4_[NA, n, MFA_subs]/MSC_010208/MuSu_(NA, n, MFA_subs).Rmd
+++ b/res_MuSu/4_[NA, n, MFA_subs]/MSC_010208/MuSu_(NA, n, MFA_subs).Rmd
@@ -35,7 +35,13 @@ parcelfile2read <- c("/sub-MSC01_node_parcel_comm.txt",
                      "/sub-MSC08_node_parcel_comm.txt")
 subj.name <- c("sub01","sub02", "sub08")
 
+load(paste0("../../../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read the labels of grandtable
+# gt: grand tabls
+# labels: information for each edge in the rectangular grand table
 
+## Categorize columns by between or within edges
+#--- Create new column of sub-edgetype
+gtlabel[,'subjects_wb'] <- sprintf('%s_%s',gtlabel$subjects_label,gtlabel$wb)
 
 ```
 
@@ -43,7 +49,7 @@ subj.name <- c("sub01","sub02", "sub08")
 
 ##### Data:
 
-The data are from the morning scan club (MSC) resting-state data where the 2 participants (i.e., subjects 1 and 8 from the original study) were each scanned 10 times. The data that are analyzed here are the z-transformed coefficients of correlation between regions. These regions can be categorized into 12 networks: 
+The data are from the morning scan club (MSC) resting-state data where the participants were each scanned 10 times. The data that are analyzed here are the z-transformed coefficients of correlation between regions. These regions can be categorized into 12 networks: 
 
 ```{r community_list, echo = FALSE, fig.height= 10, fig.width = 2}
 # rename communities
@@ -79,7 +85,7 @@ for(i in 1:length(subj.name)){
   names(labelcol)[i] <- subj.name[i]
   
   textcol[[i]] <- rep("black", length(labelcol[[i]]))
-  textcol[[i]][as(hex2RGB(labelcol[[i]]), "polarLUV")@coords[,1] < 35] <- "white"  # Convert hex2RGB to lum
+  textcol[[i]][as(colorspace::hex2RGB(labelcol[[i]]), "polarLUV")@coords[,1] < 35] <- "white"  # Convert hex2RGB to lum
 }
 
 ```
@@ -87,72 +93,49 @@ for(i in 1:length(subj.name)){
 As a result, the correlation matrix of each session of each subject will look like this:
 
 ```{r data, echo = FALSE, include = FALSE, fig.show='hide'}
-### Make these not objects, but part of a list? ### MYC NEED TO CHANGE 20190404
-# read examplar data
-zmat.path <- "../../../data/zmat"
-subj.num <- csubstr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
-#--- plot heatmap
-for(subj.count in 1:length(parcel.list)){
-  load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
-  for(session.count in 1:dim(cubes$rcube)[3]){
-    # heat map of correlation matrices
-    hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
-    assign(hmap.name, superheat(cubes$rcube[,,session.count],
-                                membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-                                membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-                                clustering.method = NULL,
-                                heat.col.scheme = "viridis",
-                                left.label.size = 0.08,
-                                bottom.label.size = 0.05,
-                                y.axis.reverse = TRUE,
-                                left.label.col = labelcol[[subj.count]], # order by community name
-                                bottom.label.col = labelcol[[subj.count]],
-                                left.label.text.size = 3,
-                                bottom.label.text.size = 2,
-                                left.label.text.col = textcol[[subj.count]],
-                                bottom.label.text.col = textcol[[subj.count]],
-                                left.label.text.alignment = "left",
-                                title = sprintf("Correlation matrix of #%s session",session.count)
-    ))
-  }
-}
+# ### Make these not objects, but part of a list? ### MYC NEED TO CHANGE 20190404
+# # read examplar data
+# zmat.path <- "../../../data/zmat"
+# subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
+# #--- plot heatmap
+# hmaplist <- list()
+# hmaplist_i <- 1
+# for(subj.count in 1:length(parcel.list)){
+#   load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
+#   hmaplist[[subj.count]] <- list()
+#   for(session.count in 1:dim(cubes$rcube)[3]){
+#     # heat map of correlation matrices
+#     hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
+#     hmaplist[[subj.count]][session.count] <- superheat(cubes$rcube[,,session.count],
+#                                 membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+#                                 membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+#                                 clustering.method = NULL,
+#                                 heat.col.scheme = "viridis",
+#                                 left.label.size = 0.08,
+#                                 bottom.label.size = 0.05,
+#                                 y.axis.reverse = TRUE,
+#                                 left.label.col = labelcol[[subj.count]], # order by community name
+#                                 bottom.label.col = labelcol[[subj.count]],
+#                                 left.label.text.size = 3,
+#                                 bottom.label.text.size = 2,
+#                                 left.label.text.col = textcol[[subj.count]],
+#                                 bottom.label.text.col = textcol[[subj.count]],
+#                                 left.label.text.alignment = "left",
+#                                 title = sprintf("Correlation matrix of #%s session",session.count)
+#                                 )
+#     # hmaplist_i <- hmaplist_i + 1
+#   }
+# }
+
 ```
 
-```{r hide_hmap, echo = FALSE, include = FALSE}
-# superheat(cubes$rcube[,,1],
-#           membership.cols = parcel.list$sub01$vox.des$Comm.rcd,
-#           membership.rows = parcel.list$sub01$vox.des$Comm.rcd,
-#           clustering.method = NULL,
-#           heat.col.scheme = "viridis",
-#           left.label.size = 0.08,
-#           bottom.label.size = 0.05,
-#           y.axis.reverse = TRUE,
-#           left.label.col = labelcol$sub01,
-#           bottom.label.col = labelcol$sub01,
-#           left.label.text.size = c(rep(6,4), rep(3,3),6,3,  rep(6,2),3,rep(6,5),3,3),
-#           bottom.label.text.size = 2,
-#           left.label.text.col = textcol$sub01,
-#           bottom.label.text.col = textcol$sub01,
-#           left.label.text.alignment = "left",
-#           title = "Correlation matric of the 1st session of Subject 1"
-# )
+```{r plot_all_sub_session_hmap, echo=F, fig.height=(8*length(subj.name)), fig.width= 40}
+# for(i in 1:length(hmaplist)){
+#   print(sprintf("%s", subj.name[i]))
+#   do.call(grid.arrange, c(hmaplist[[i]], ncol=5))
+# }
 ```
 
-```{r plot_sub01_10hmap, echo=F, fig.height=16, fig.width= 40}
-gridExtra::grid.arrange(as.grob(sub01_hmap1$plot),as.grob(sub01_hmap2$plot),as.grob(sub01_hmap3$plot),
-                        as.grob(sub01_hmap4$plot),as.grob(sub01_hmap5$plot),as.grob(sub01_hmap6$plot),
-                        as.grob(sub01_hmap7$plot),as.grob(sub01_hmap8$plot),as.grob(sub01_hmap9$plot),
-                        as.grob(sub01_hmap10$plot),ncol=5,
-                        top = textGrob("Subject 01",gp=gpar(fontsize=18,font=3)))
-```
-
-```{r plot_sub02_10hmap, echo=F, fig.height=16, fig.width= 40}
-gridExtra::grid.arrange(as.grob(sub08_hmap1$plot),as.grob(sub08_hmap2$plot),as.grob(sub08_hmap3$plot),
-                        as.grob(sub08_hmap4$plot),as.grob(sub08_hmap5$plot),as.grob(sub08_hmap6$plot),
-                        as.grob(sub08_hmap7$plot),as.grob(sub08_hmap8$plot),as.grob(sub08_hmap9$plot),
-                        as.grob(sub08_hmap10$plot),ncol=5,
-                        top = textGrob("Subject 08",gp=gpar(fontsize=18,font=3)))
-```
 
 This correlation matrix were then turned into a rectangular matrix
 
@@ -163,20 +146,6 @@ This correlation matrix were then turned into a rectangular matrix
 + Columns: Different edges (e.g, _within DMN_, _between DMN & CON_, _between DMN & FPN_, etc.) of different subjects
 
 _Note: The data was transformed from the upper triangle of the correlation matrices. From the correlation matrix of each session, its upper triangle are reshape as a vector. These reshaped vectors of different sessions are then concatenated on the rows and those of different subjects are concatenated on the columns._
-
-```{r grandtable}
-# > Read grand table of subject 1 --------------------
-## grand table and the labels for each intersection of the correlation matirx
-load(paste0("../../../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read the labels of grandtable
-# gt: grand tabls
-# labels: information for each edge in the rectangular grand table
-
-## Categorize columns by between or within edges
-#--- Create new column of sub-edgetype
-gtlabel[,'subjects_wb'] <- sprintf('%s_%s',gtlabel$subjects_label,gtlabel$wb)
-
-```
-
 
 ##### Method:
 
@@ -391,382 +360,6 @@ plot.pf_sess <- createPartialFactorScoresMap(
   font.labels = "bold"
 )
 
-# add it to the factor map
-plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
-```
-
-To have a clearer view of the factor scores for the subject x edges, we first compute the mean factor scores for the each network edge.
-
-```{r mean_fj_bootstrap}
-# Compute means of factor scores for different edges----
-mean.fj <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_edge_label) # with t(gt)
-colnames(mean.fj) <- sapply(c(1:ncol(mean.fj)), function(x){sprintf("Factor %s",x)})
-
-BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fj,
-                           design = gtlabel$subjects_edge_label,
-                           niter = 100,
-                           suppressProgressBar = TRUE)
-
-
-# Compute means of factor scores for different types of edges
-mean.fj.bw <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_wb) # with t(gt)
-colnames(mean.fj.bw) <- sapply(c(1:ncol(mean.fj.bw)), function(x){sprintf("Factor %s",x)})
-
-BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fj,
-                           design = gtlabel$subjects_wb,
-                           niter = 100,
-                           suppressProgressBar = TRUE)
-
-```
-
-Next, we plot the factor scores for the subject x edges (a mess): Dim 1 & 2
-```{r plot_f_edge, echo=FALSE, fig.show = 'hide'}
-# plot all factor scores
-plot.f_edge <- createFactorMap(mean.fj, axis1 = 1, axis2 = 2,
-                               col.points = net.edge.col$oc,
-                               text.cex = 2,
-                               force = 0.5,
-                               title = "All factor scores - colored by subject_x_edge types")
-f_netedge_plot01 <- plot.f_edge$zeMap_background + plot.f_edge$zeMap_dots + f.labels
-# plot the significantly contributed factor scores
-plot.f_edge_imp <- createFactorMap(mean.fj, axis1 = 1, axis2 = 2,
-                                   col.points = col4ImportantEdg,
-                                   col.labels = col4ImportantEdg,
-                                   text.cex = 2,
-                                   force = 0.5,
-                                   title = "Significantly contributed factor scores - colored by subject_x_edge types")
-f_netedge_plot02 <- plot.f_edge_imp$zeMap_background + plot.f_edge_imp$zeMap_dots + f.labels
-
-# plot only the significant network edges
-plot.f_impedge <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2 = 2,
-                                   col.points = col4ImportantEdg[importantEdg,],
-                                   col.labels = col4ImportantEdg[importantEdg,],
-                                   constraints = plot.f_edge_imp$constraints,
-                                   text.cex = 2,
-                                   force = 0.5,
-                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
-f_netedge_plot03 <- plot.f_impedge$zeMap + f.labels
-
-# plot mean factor scores of subject x edge type
-plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
-                                   col.points = net.edge.col$gc[rownames(mean.fj.bw),],
-                                   col.labels = net.edge.col$gc[rownames(mean.fj.bw),],
-                                   text.cex = 3,
-                                   force = 0.5,
-                                   title = "Mean factor scores for subject_x_edge types")
-f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
-
-```
-
-```{r grid_f_netedge_plot, echo=F, fig.height=12, fig.width=12}
-gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),as.grob(f_netedge_plot04),nrow=2,
-                        top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
-```
-Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
-
-We can also add boostrap intervals for the factor scores
-```{r CI_plot, echo = FALSE, fig.show='hide', message= FALSE}
-# plot the only significantly contributed factor scores
-# get the bootstrap data for each network edge
-getBoot2plot_edge <- BootCube.Comm$BootCube[importantEdg,c(1,2),]
-# plot the CI ellipses
-f_impedge.CI <- MakeCIEllipses(getBoot2plot_edge,
-                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
-                                 col = col4ImportantEdg[importantEdg,],
-                                 p.level = .95)
-# create plot
-f_CInetedge_plot01 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f.labels
-f_CInetedge_plot02 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f_impedge.CI + f.labels
-
-# get the bootstrap data for each type of network edges
-getBoot2plot_edge_bw <- BootCube.Comm.bw$BootCube[,c(1,2),]
-# plot the CI ellipses
-plot.CI.f_bw <- MakeCIEllipses(getBoot2plot_edge_bw,
-                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
-                                 col = net.edge.col$gc[rownames(getBoot2plot_edge_bw),],
-                                 p.level = .95)
-# create plot
-f_CInetedge_plot03 <- plot.f_bw_imp$zeMap + plot.CI.f_bw + f.labels
-```
-
-```{r grid_f_netedgeCI_plot, echo=F, fig.height=12, fig.width=12, message=FALSE}
-gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), as.grob(f_CInetedge_plot02), as.grob(f_CInetedge_plot03),ncol=2,
-                        top = textGrob("Mean factor scores with CIs for significantly contributed edges",gp=gpar(fontsize=18,font=3)))
-```
-
-
-
-We can also show the factor scores for network edges as square matrix of sub01 (MSC 01) and sub02 (MSC 08)
-
-```{r squaremat_fi, echo=F, fig.show = 'hide'}
-fj1_s1_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label=="sub01",1])
-fj1_s2_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label=="sub02",1])
-
-fj2_s1_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label=="sub01",2])
-fj2_s2_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label=="sub02",2])
-
-heat_fj1_s1 <- superheat(fj1_s1_sqmat, y.axis.reverse = T,
-                    membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                    membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                    left.label.col = labelcol$sub01,
-                    bottom.label.col = labelcol$sub01,
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                    heat.lim = c(-.005, .005),
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol$sub01, 
-                    bottom.label.text.col = textcol$sub01, 
-                    title="sub01, dim1")
-
-heat_fj1_s2 <- superheat(fj1_s2_sqmat, y.axis.reverse = T,
-                    membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                    membership.cols =parcel.list$sub02$vox.des$Comm.rcd,
-                    left.label.col = labelcol$sub02,
-                    bottom.label.col = labelcol$sub02,
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                    heat.lim = c(-.005, .005),
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol$sub02,
-                    bottom.label.text.col = textcol$sub02,
-                    title="sub02, dim1")
-
-heat_fj2_s1 <- superheat(fj2_s1_sqmat, y.axis.reverse = T,
-                    membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                    membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                    left.label.col = labelcol$sub01,
-                    bottom.label.col = labelcol$sub01,
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                    heat.lim = c(-.005, .005),
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol$sub01, 
-                    bottom.label.text.col = textcol$sub01, 
-                    title="sub01, dim2")
-
-heat_fj2_s2 <- superheat(fj2_s2_sqmat, y.axis.reverse = T,
-                    membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                    membership.cols =parcel.list$sub02$vox.des$Comm.rcd,                    
-                    left.label.col = labelcol$sub02,
-                    bottom.label.col = labelcol$sub02,
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                   #  heat.lim = c(-.6, .6),
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol$sub02, 
-                    bottom.label.text.col = textcol$sub02, 
-                    title="sub02, dim2")
-```
-
-```{r grid_heat_fi, echo=F, fig.height=15, fig.width=14}
-gridExtra::grid.arrange(as.grob(heat_fj1_s1$plot), as.grob(heat_fj1_s2$plot), 
-                        as.grob(heat_fj2_s1$plot), as.grob(heat_fj2_s2$plot), 
-                        ncol=2,
-                        top = textGrob("Node x Node Matrix of Factor Score: Dim 1 & Dim 2",gp=gpar(fontsize=18,font=3)))
-```
-
-Factor score (Dim 1) in square matrix that have significant contribution only
-```{r, squaremat_sigfj1, echo=F, fig.show = 'hide'}
-fj_sig <- svd.res$ExPosition.Data$fj
-fj_sig[!importantEdg1] <- 0
-fj1_sub1_sig_sqmat <- vec2sqmat(fj_sig[gtlabel$subjects_label=="sub01",1])
-fj1_sub2_sig_sqmat <- vec2sqmat(fj_sig[gtlabel$subjects_label=="sub02",1])
-
-heat_sigfj1_sub1 <- superheat(fj1_sub1_sig_sqmat, y.axis.reverse = T,
-                             membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                             membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                             left.label.col = labelcol$sub01,
-                             bottom.label.col = labelcol$sub01,
-                             left.label.size = 0.08,
-                             bottom.label.size = 0.05,
-                             extreme.values.na = FALSE,
-                             heat.lim = c(-.005, .005),
-                             heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                             heat.pal.values = c(0,0.35,0.5,0.65,1),
-                             left.label.text.size = 3,
-                             bottom.label.text.size = 2,
-                             left.label.text.col = textcol$sub01, 
-                             bottom.label.text.col = textcol$sub01, 
-                             title="sub1: significant contribution")
-
-heat_sigfj1_sub2 <- superheat(fj1_sub2_sig_sqmat, y.axis.reverse = T,
-                             membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                             membership.cols =parcel.list$sub02$vox.des$Comm.rcd,
-                             left.label.col = labelcol$sub02,
-                             bottom.label.col = labelcol$sub02,
-                             left.label.size = 0.08,
-                             bottom.label.size = 0.05,
-                             extreme.values.na = FALSE,
-                             heat.lim = c(-.005, .005),
-                             heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                             heat.pal.values = c(0,0.35,0.5,0.65,1),
-                             left.label.text.size = 3,
-                             bottom.label.text.size = 2,
-                             left.label.text.col = textcol$sub02,
-                             bottom.label.text.col = textcol$sub02,
-                             title="sub2: significant contribution")
-
-```
-
-```{r, grid_heat_sigfj1, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(heat_sigfj1_sub1$plot), as.grob(heat_sigfj1_sub2$plot), 
-                        ncol=2,
-                        top = textGrob("Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1",gp=gpar(fontsize=16,font=3)))
-```
-
-Smoothed Sig Factor Score (Dim 1)
-```{r, sm_squaremat_sigfj1, echo=F, fig.show = 'hide'}
-#--- the important variables are the ones that contribute more than or equal to the average
-sm_heat_sigfj1_sub1 <- superheat(fj1_sub1_sig_sqmat, y.axis.reverse = T, 
-                                 smooth.heat = T, smooth.heat.type = "mean",
-                                 membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                                 membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                                 left.label.col = labelcol$sub01,
-                                 bottom.label.col = labelcol$sub01,
-                                 left.label.size = 0.08,
-                                 bottom.label.size = 0.05,
-                                 extreme.values.na = FALSE,
-                                 heat.lim = c(-.005, .005),
-                                 heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                                 heat.pal.values = c(0,0.35,0.5,0.65,1),
-                                 left.label.text.size = 3,
-                                 bottom.label.text.size = 2,
-                                 left.label.text.col = textcol$sub01,
-                                 bottom.label.text.col = textcol$sub01, 
-                                 title="Node x Node Matrix of factor scores - sub1")
-
-sm_heat_sigfj1_sub2 <- superheat(fj1_sub2_sig_sqmat, y.axis.reverse = T,
-                                 smooth.heat = T, smooth.heat.type = "mean",
-                                 membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                                 membership.cols =parcel.list$sub02$vox.des$Comm.rcd,
-                                 left.label.col = labelcol$sub02,
-                                 bottom.label.col = labelcol$sub02,
-                                 left.label.size = 0.08,
-                                 bottom.label.size = 0.05,
-                                 extreme.values.na = FALSE,
-                                 heat.lim = c(-.005, .005),
-                                 heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                                 heat.pal.values = c(0,0.35,0.5,0.65,1),
-                                 left.label.text.size = 3,
-                                 bottom.label.text.size = 2,
-                                 left.label.text.col = textcol$sub02,
-                                 bottom.label.text.col = textcol$sub02,
-                                 title="Node x Node Matrix of factor scores - sub2")
-
-```
-
-```{r, grid_smheat_sigfj1, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(sm_heat_sigfj1_sub1$plot), as.grob(sm_heat_sigfj1_sub2$plot), 
-                        ncol=2,
-                        top = textGrob("Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1",gp=gpar(fontsize=16,font=3)))
-```
-
-Factor score (Dim 2) in square matrix that have significant contribution only
-
-```{r, squaremat_sigfj2, echo=F, fig.show = 'hide'}
-fj2_sub1_sig_sqmat <- vec2sqmat(fj_sig[gtlabel$subjects_label=="sub01",2])
-fj2_sub2_sig_sqmat <- vec2sqmat(fj_sig[gtlabel$subjects_label=="sub02",2])
-
-heat_sigfj2_sub1 <- superheat(fj2_sub1_sig_sqmat, y.axis.reverse = T,
-                              membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                              membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                              left.label.col = labelcol$sub01,
-                              bottom.label.col = labelcol$sub01,
-                              left.label.size = 0.08,
-                              bottom.label.size = 0.05,
-                              extreme.values.na = FALSE,
-                              heat.lim = c(-.005, .005),
-                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                              heat.pal.values = c(0,0.35,0.5,0.65,1),
-                              left.label.text.size = 3,
-                              bottom.label.text.size = 2,
-                              left.label.text.col = textcol$sub01, 
-                              bottom.label.text.col = textcol$sub01, 
-                              title="sub1: significant contribution")
-
-heat_sigfj2_sub2 <- superheat(fj2_sub2_sig_sqmat, y.axis.reverse = T,
-                              membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                              membership.cols =parcel.list$sub02$vox.des$Comm.rcd,
-                              left.label.col = labelcol$sub02,
-                              bottom.label.col = labelcol$sub02,
-                              left.label.size = 0.08,
-                              bottom.label.size = 0.05,
-                              extreme.values.na = FALSE,
-                              heat.lim = c(-.005, .005),
-                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                              heat.pal.values = c(0,0.35,0.5,0.65,1),
-                              left.label.text.size = 3,
-                              bottom.label.text.size = 2,
-                              left.label.text.col = textcol$sub02,
-                              bottom.label.text.col = textcol$sub02,
-                              title="sub2: significant contribution")
-```
-
-```{r, grid_heat_sigfj2, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(heat_sigfj2_sub1$plot), as.grob(heat_sigfj2_sub2$plot), 
-                        ncol=2,
-                        top = textGrob("Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2",gp=gpar(fontsize=16,font=3)))
-```
-
-Smoothed Sig Factor Score (Dim 2)
-```{r, sm_squaremat_sigfj2, echo=F, fig.show = 'hide'}
-#--- the important variables are the ones that contribute more than or equal to the average
-sm_heat_sigfj2_sub1 <- superheat(fj2_sub1_sig_sqmat, y.axis.reverse = T, 
-                                 smooth.heat = T, smooth.heat.type = "mean",
-                                 membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
-                                 membership.cols =parcel.list$sub01$vox.des$Comm.rcd,                    
-                                 left.label.col = labelcol$sub01,
-                                 bottom.label.col = labelcol$sub01,
-                                 left.label.size = 0.08,
-                                 bottom.label.size = 0.05,
-                                 extreme.values.na = FALSE,
-                                 heat.lim = c(-.005, .005),
-                                 heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                                 heat.pal.values = c(0,0.35,0.5,0.65,1),
-                                 left.label.text.size = 3,
-                                 bottom.label.text.size = 2,
-                                 left.label.text.col = textcol$sub01,
-                                 bottom.label.text.col = textcol$sub01, 
-                                 title="Node x Node Matrix of 2nd component factor scores - sub1")
-
-sm_heat_sigfj2_sub2 <- superheat(fj2_sub2_sig_sqmat, y.axis.reverse = T,
-                                 smooth.heat = T, smooth.heat.type = "mean",
-                                 membership.rows =parcel.list$sub02$vox.des$Comm.rcd,
-                                 membership.cols =parcel.list$sub02$vox.des$Comm.rcd,
-                                 left.label.col = labelcol$sub02,
-                                 bottom.label.col = labelcol$sub02,
-                                 left.label.size = 0.08,
-                                 bottom.label.size = 0.05,
-                                 extreme.values.na = FALSE,
-                                 heat.lim = c(-.005, .005),
-                                 heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                                 heat.pal.values = c(0,0.35,0.5,0.65,1),
-                                 left.label.text.size = 3,
-                                 bottom.label.text.size = 2,
-                                 left.label.text.col = textcol$sub02,
-                                 bottom.label.text.col = textcol$sub02,
-                                 title="Node x Node Matrix of 2nd component factor scores - sub2")
-
-```
-
-```{r, grid_smheat_sigfj2, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(sm_heat_sigfj2_sub1$plot), as.grob(sm_heat_sigfj2_sub2$plot), 
-                        ncol=2,
-                        top = textGrob("Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2",gp=gpar(fontsize=16,font=3)))
+# add it to the factor map ** MYC this broke when there is 3 subjects, ask JC 20190410
+# plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
 ```
